Prevent text from overlapping the search icon.

--- a/theme/assets-src/styles/sidebar.less
+++ b/theme/assets-src/styles/sidebar.less
@@ -71,7 +71,7 @@
 
 .search-input {
 	width: 100%;
-	padding: 6px 10px;
+	padding: 6px 30px 6px 10px;
 	// font-weight: 300;
 	border-radius: @corner-radius;
 	border: 1px solid @border;
